myVPC02.json
{

    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "this template for creating VPC",

    "Parameters":{
     
     "myPublicAZ": {
         "Type": "AWS::EC2::AvailabilityZone::Name"
       
     },

    
    "myPrivateAZ": {
        "Type": "AWS::EC2::AvailabilityZone::Name"
        
    }
    
    
    
    
     
    
     
    },

    "Resources":{

     
     "myVPC": {
       "Type": "AWS::EC2::VPC",
       "Properties": {
         "CidrBlock": "192.168.0.0/22"
       }
     },
    
     "myIGW": {
       "Type": "AWS::EC2::InternetGateway"
      },
     "AttachGateway": {
       "Type": "AWS::EC2::VPCGatewayAttachment",
       "Properties": {
         "VpcId": 
         { "Ref": "myVPC" }
         ,
         "InternetGatewayId": { "Ref": "myIGW" }
       }
     },
     
     "PublicSubnet": {
       "Type": "AWS::EC2::Subnet",
       "Properties": {
         "AvailabilityZone":
         { "Ref": "myPublicAZ" }
         ,
         "VpcId": 
         { "Ref": "myVPC" }
         ,
         "CidrBlock": "192.168.1.0/24"
       }
     },


     
     "PublicRT": {
       "Type": "AWS::EC2::RouteTable",
       "Properties": {
         "VpcId": 
         { "Ref": "myVPC" }
         
       }
     },

     
     "PublicrouteTableAssoc": {
       "Type": "AWS::EC2::SubnetRouteTableAssociation",
       "Properties": {
         "SubnetId": { "Ref": "PublicSubnet" },
         "RouteTableId": { "Ref": "PublicRT" }
       }
     },

    
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": 
        { "Ref": "PublicRT" }
        ,
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": 
        { "Ref": "myIGW" }
        
      }
    },
    
     
     
     "privateSubnet": {
       "Type": "AWS::EC2::Subnet",
       "Properties": {
         "AvailabilityZone": 
         { "Ref": "myPrivateAZ" }
         ,
         "VpcId": 
         { "Ref": "myVPC" }
         ,
         "CidrBlock": "192.168.2.0/24"
       }
     },
     
     
     "PrivateRT": {
       "Type": "AWS::EC2::RouteTable",
       "Properties": {
         "VpcId": 
         { "Ref": "myVPC" }
         
       }
     },

     
     "PrivaterouteTableAssoc": {
       "Type": "AWS::EC2::SubnetRouteTableAssociation",
       "Properties": {
         "SubnetId": 
         { "Ref": "privateSubnet" }
         ,
         "RouteTableId": 
         { "Ref": "PrivateRT" }
         
       }
     },

     "myEIP" : {
     "Type" : "AWS::EC2::EIP"
      },

      "myNAT" : {
        "Type" : "AWS::EC2::NatGateway",
        "Properties" : {
           "AllocationId" : { "Fn::GetAtt" : ["myEIP", "AllocationId"]},
           "SubnetId" : { "Ref" : "PublicSubnet"}
          }
     },
     
     "PrivaterouteName": {
       "Type": "AWS::EC2::Route",
       "Properties": {
         "RouteTableId": 
         { "Ref": "PrivateRT" }
         ,
         "DestinationCidrBlock": "0.0.0.0/0",
         "NatGatewayId" : { "Ref" : "myNAT" }
       }
     }
     
     
     
     
     
     


    },


    "Outputs":{

    }






}
